# autoware_carla_bridge

./: .envrc  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Makefile  README.md
carla_agent/: pyproject.toml
docs/: carla-rust-integration.md  message-type-migration.md  roadmap.md  zenoh-to-rclrs-api-comparison.md
docs/roadmap/: architecture.md  core-migration.md  enhancements.md  feature-implementation.md  meta.md
scripts/: install_deps.sh  run_test_env.sh  setup_interfaces.sh
scripts/simulators/: carla-0.9.14  carla-0.9.15  carla-0.9.16
scripts/simulators/startup/: run-0.9.14.sh  run-0.9.15.sh  run-0.9.16.sh
src/autoware_carla_bridge/: Cargo.toml  package.xml
src/autoware_carla_bridge/launch/: autoware_carla_bridge.launch.xml
src/autoware_carla_bridge/src/: autoware.rs  clock.rs  error.rs  main.rs  utils.rs
src/autoware_carla_bridge/src/bridge/: actor_bridge.rs  other_bridge.rs  sensor_bridge.rs  trafficlight_bridge.rs  trafficsign_bridge.rs  vehicle_bridge.rs
