[project]
name = "carla-agent"
version = "0.1.0"
description = "CARLA vehicle spawning and control agent"
authors = [{name = "ChenYing Kuo", email = "evshary@gmail.com"}]
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.1.2",
    "carla==0.9.15",
    "numpy>=1.24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["simulation"]

# Ruff
[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "single"
