<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_carla_bridge</name>
  <version>0.12.0</version>
  <description>ROS 2 bridge between Autoware and CARLA simulator</description>
  <maintainer email="maintainer@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <build_depend>libclang-dev</build_depend>
  <build_depend>rosidl_runtime_rs</build_depend>

  <!-- Runtime dependencies -->
  <depend>rclrs</depend>
  <depend>rcl</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>autoware_vehicle_msgs</depend>
  <depend>tier4_vehicle_msgs</depend>
  <depend>tier4_control_msgs</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
